<resources>
    <string name="app_name">NavigationDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="firstFragTitle">Fragment One</string>
    <string name="firstFragBtn1">Go To Image 1</string>
    <string name="firstFragBtn2">Go To Image 2</string>
    <string name="firstFragBtn3">Go To Image 3</string>

    <string name="secondFragTitle">Fragment Two</string>
    <string name="secondFragTextview">Output</string>

    <string name="image_1_desc">Image 1</string>
    <string name="image_2_desc">Image 2</string>
    <string name="image_3_desc">Image 3</string>
</resources>