<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-6dp">

    <!-- Image 1 -->

    <ImageView
        android:id="@+id/image1"
        android:layout_width="269dp"
        android:layout_height="135dp"
        android:contentDescription="@string/image_1_desc"
        android:src="@drawable/android_image_1"
        tools:layout_editor_absoluteY="1dp" />


    <!-- Button 1 -->

    <!-- Image 2 -->
    <ImageView
        android:id="@+id/image2"
        android:layout_width="269dp"
        android:layout_height="136dp"
        android:contentDescription="@string/image_2_desc"
        android:src="@drawable/android_image_2"
        tools:layout_editor_absoluteY="137dp" />


    <!-- Button 2 -->


    <!-- Image 3 -->
    <ImageView
        android:id="@+id/image3"
        android:layout_width="269dp"
        android:layout_height="136dp"
        android:contentDescription="@string/image_3_desc"
        android:src="@drawable/android_image_3"
        tools:layout_editor_absoluteY="274dp" />


    <!-- Button 3 -->

    <Button
        android:id="@+id/firstFragBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstFragBtn3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstFragBtn2"
        tools:layout_editor_absoluteX="459dp" />

    <Button
        android:id="@+id/firstFragBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstFragBtn1"
        app:layout_constraintBottom_toTopOf="@+id/firstFragBtn2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="459dp" />

    <Button
        android:id="@+id/firstFragBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstFragBtn2"
        app:layout_constraintBottom_toTopOf="@+id/firstFragBtn3"
        app:layout_constraintTop_toBottomOf="@+id/firstFragBtn1"
        tools:layout_editor_absoluteX="459dp" />


</GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
